# SCAR_Artifact

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Readme.md  requirements.txt  setup.sh
experiments/: CMakeLists.txt
experiments/cpython_dictionary/: CMakeLists.txt  Readme.md  cpython_dictionary.c
experiments/cpython_dictionary/python/: cpython_dictionary.py
experiments/cpython_pow/: CMakeLists.txt  Readme.md  cpython_pow.c  cpython_pow.h
experiments/cpython_pow/evaluation/: e2e.py  extract.py  metrics.py
experiments/cpython_pow/python/: cpython_pow.py  requirements.txt
experiments/quickjs_jpeg/: CMakeLists.txt  Readme.md  jpeg_js.c  quickjs_jpeg.c
experiments/quickjs_jpeg/evaluation/: extract_jpeg_js.py  plot_jpeg_js.py  plot_models.py  spectrum.py  utils.py
experiments/quickjs_jpeg/js/: jpeg-js.js  jpeg_decode_digit_0.js  jpeg_decode_emacs.js  utils.js
experiments/quickjs_rsa/: CMakeLists.txt  Readme.md  openpgp_rsa.c  openpgp_rsa_key_pool.c  quickjs_rsa.c  quickjs_rsa_key_pool.c
experiments/quickjs_rsa/evaluation/: extract_openpgp_rsa.py  utils.py
experiments/quickjs_rsa/js/: openpgp.js  openpgp_rsa.js  utils.js
experiments/quickjs_rsa/rsa_key_pool/: rsa_key_0.json  rsa_key_1.json  rsa_key_10.json  rsa_key_100.json  rsa_key_101.json  rsa_key_102.json  rsa_key_103.json  rsa_key_104.json  rsa_key_105.json  rsa_key_106.json  rsa_key_107.json  rsa_key_108.json  rsa_key_109.json  rsa_key_11.json  rsa_key_110.json  rsa_key_111.json  rsa_key_112.json  rsa_key_113.json  rsa_key_114.json  rsa_key_115.json  rsa_key_116.json  rsa_key_117.json  rsa_key_118.json  rsa_key_119.json  rsa_key_12.json  rsa_key_120.json  rsa_key_121.json  rsa_key_122.json  rsa_key_123.json  rsa_key_124.json  rsa_key_125.json  rsa_key_126.json  rsa_key_127.json  rsa_key_13.json  rsa_key_14.json  rsa_key_15.json  rsa_key_16.json  rsa_key_17.json  rsa_key_18.json  rsa_key_19.json  (+88 more)
experiments/v8_ecdh/: CMakeLists.txt  Readme.md  v8_ecdh_key_pool.cc
experiments/v8_ecdh/ec_key_pool/: ec_key_0.json  ec_key_1.json  ec_key_10.json  ec_key_11.json  ec_key_12.json  ec_key_13.json  ec_key_14.json  ec_key_15.json  ec_key_16.json  ec_key_17.json  ec_key_18.json  ec_key_19.json  ec_key_2.json  ec_key_20.json  ec_key_21.json  ec_key_22.json  ec_key_23.json  ec_key_24.json  ec_key_25.json  ec_key_26.json  ec_key_27.json  ec_key_28.json  ec_key_29.json  ec_key_3.json  ec_key_30.json  ec_key_31.json  ec_key_32.json  ec_key_33.json  ec_key_34.json  ec_key_35.json  ec_key_36.json  ec_key_37.json  ec_key_38.json  ec_key_39.json  ec_key_4.json  ec_key_40.json  ec_key_41.json  ec_key_42.json  ec_key_43.json  ec_key_44.json  (+60 more)
experiments/v8_ecdh/evaluation/: extract_ecdh.py
experiments/v8_ecdh/js/: elliptic_ecdh_eval.js  elliptic_ecdh_repeat.js  elliptic_ecdh_set_keypair_template.js
include/: arch.h  cache.h  config.h  cpython_runtime.h  dsp.h  flush_reload.h  fs.h  linked_list.h  log.h  prime_probe.h  quickjs_runtime.h  shared_memory.h  v8_runtime.h
src/: CMakeLists.txt
src/attack/: CMakeLists.txt  LLCF.c  flush_reload.c  prime_probe.c
src/runtime/: CMakeLists.txt
src/runtime/cpython/: CMakeLists.txt  cpython_rt.c  cpython_runtime.c
src/runtime/quickjs/: CMakeLists.txt  quickjs_rt.c  quickjs_runtime.c
src/runtime/v8/: CMakeLists.txt  v8_runtime.cc
src/utils/: CMakeLists.txt  arch.c  cache.c  config.c  dsp.c  fs.c  log.c  shared_memory.c
